css/style.css
:root{
    --yellowColour: #FFF;
    --blueColour:#0F559C;
    --pinkColour:#F26963;
    --purpleColour:#1E88E5;
}
*{
	padding:0;
	margin:0;
}
A{
  color:#4285f4;
}
A:hover{
  color:#306199;
}
body{
  background-color: #ecf0f1;
  font-family: 'Raleway', sans-serif;
}
#navbar{
  margin: -10px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  z-index: 20;
}
#title{
  color:white;
  text-decoration: none;
}
.list-right h3, small{
  padding-bottom:10px;
}
.list-right p{
  padding-top:10px;
}
nav{
  width: 100vw;
  height: 8vw;
  min-height: 80px;
  padding-top: 10px;
  max-height: 60px;
  margin: auto;
  margin-right: -10px;
  overflow: auto;
  position: fixed;
  background: var(--purpleColour);
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-box-shadow: 10px 10px 25px -10px rgba(30,136,229,1);
  -moz-box-shadow: 10px 10px 25px -10px rgba(30,136,229,1);
  box-shadow: 10px 10px 25px -10px rgba(30,136,229,1);
}
nav .companyInfo{
  width: 42%;
  display: inline-block;
  float: left;
  font-family: Lobster;
  /*border: 1px solid green;*/
}
nav i {
  float: left;
  color: white;
  margin: 12px;
  margin-left: 20px;
  /*border: 2px solid red;*/
}
nav .companyName{
  font-size: 3vw;
  width: 75%;
  margin-left: 15%;
  margin-top: 10px;
  color: white;
}
nav .searchForm{
  width: 55%;
  height: 40px;
  /*border: 2px solid black;*/
  margin-left: 40%;
  margin-top: 23px;
}

#search-form{
	display:block;

}

.fieldcontainer{
	display:block;
	position:relative;
	width:90%;
	margin:0 auto;
  margin-top: 15px;

}

.search-field{
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box;
	box-sizing:border-box;
	display:block;
	width:100%;
  margin-left: 5%;
  height: 5vh;
	padding:11px 7px;
	padding-right:43px;
	background:#fff;
	color:#ccc;
	border:1px solid #c8c8c8;
	/*font-size:1.6em;*/
	border-bottom-color:#d2e2e7;
	-moz-border-radius:1px;
	-webkit-border-radius:1px;
	border-radius:8px;
	/*-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,0.1), 0 0 0 6px #f0f0f0;
	-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,0.1), 0 0 0 6px #f0f0f0;
	box-shadow:inset 0 1px 2px rgba(0,0,0,0.1), 0 0 0 6px #f0f0f0;*/
  margin-top: 6px;
  font-size: 20px;
  font-family: 'Raleway'
}

#search-btn{
	position:absolute;
	right:-20px;
  /*border: 1px solid red;*/
  border: 0;
	top:5px;
	height:26px;
	width:26px;
	cursor:pointer;
	filter:alpha(opacity=65);
	opacity:0.65;
	background:transparent url(../img/search.png) top left no-repeat;
  background-size: contain;
}

#search-btn:hover{
	filter:alpha(opacity=90);
	opacity:0.9;
}
#behindElement{
  height:8vw;
}
#content{
  /*border: 3px solid orange;*/
}

#results li{
  margin-left: 20px;
  margin-right: 20px;
	padding:10px 0;
	list-style:none;
	overflow:auto;
  /*background-color: var(--pinkColour);*/
}

.list-left{
	float:left;
	width:20%;
}

.list-left img{
	width:100%;
	padding:3px;
	/*border:solid #ccc 1px;*/
}

.list-right{
	float:right;
	width:78%;
}

.cTitle{
	color:#dd2826;
}

.button-container{
	margin:25px auto;
  text-align: center;
}

#back-button{
  text-decoration: none;
  background:#1E88E5;
  font-family: Lobster;
  width: 200px;
  height: 30px;
  padding:8px 0px 8px;
  border:#ccc 1px solid;
  color: #EEEEEE;
  border-radius:5px;
	margin:30px 10px 10px;
  position: absolute;
  text-align: center;
  margin-left: 30px;
}
#back-button:hover{
  cursor: pointer;
}
#back-button:hover{
  color: inherit;
}

#back-button:visited{
  color: inherit;
}
#back-button:active{
  color: inherit;
}

.paging-button{
	background:var(--pinkColour);
  width: 250px;
  height: 50px;
	padding:8px 13px;
	border:#ccc 1px solid;
	border-radius:5px;
	color:white;
	margin:10px;
	cursor:pointer;
}

#mainContainer{
  width: 100%;
  /*border: 1px solid red;*/
  overflow: hidden;
  margin: auto;
  position: relative;

}

#video{
  float: left;
  box-sizing:border-box;
  margin:150px 0px 10px 20px;
  -webkit-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
  -moz-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
  box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
}

#preview-frame {
    width: 100%;
    height: 100%;
}

#infoContainer{
  float: left;
  padding: 20px 25px 20px;
  margin:100px 0px 20px 10px;
  background-color: #fff;
  box-sizing:border-box;
  overflow-y: auto;
  height: 35vw;
  -webkit-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
  -moz-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
  box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);

}

.popup{
  font-family: 'Raleway',sans-serif;
  padding: 5px;
  display: inline;
}
.popup b{
  display: inline;
}
.grey{
  color: #ccc;
  font-weight: lighter;
  /*float: right;*/
}
.speechPart{
  color: #000;
  font-weight: normal;
}
.definition{
  font-size: 12px;
  width: 100%;
  text-align: justify;
}
.fa-volume-up{
  cursor: pointer;
}
.loading{
  width: 60px;
  height: 40px;
}

